Worked on the setup of the initial frontpage

--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- Linked stylesheet -->
     <link rel="stylesheet" href="/styles/style.css">
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>asdasd</h1>
+    <ul class="mediaLinks">
+        <li><a href=""><img src="assets/FacebookIcon.svg" alt="Facebook"></a></li>
+        <li><a href=""><img src="assets/LinkedInIcon.svg" alt="LinkedIn"></a></li>
+    </ul>
+    <main>
+        <h1>Hello!</h1>
+        <p>My name is <span>Rasmus Pedersen</span></p>
+        <p class="textBox">I am a MultiMedia Design student with <br>
+            prior experience in coding with
+        </p>
+        <ul>
+            <li>Python</li>
+            <li>HTML, CSS & JS</li>
+            <li>Vue</li>
+            <li>SASS</li>
+        </ul>
+        
+    </main>
 </body>
 </html>
